--- a/viewer-role/viewer-cluster-role.yaml
+++ b/viewer-role/viewer-cluster-role.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: rbac.authorization.k*s.io/v1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: viewer
