--- a/frontend-ingress-tls/deployment.yaml
+++ b/frontend-ingress-tls/deployment.yaml
@@ -21,13 +21,13 @@ spec:
           image: aleroawani/buysale-frontend:latest
           ports:
             - containerPort: 3030
-          resources:
-            requests:
-              memory: 128Mi
-              cpu: 100m
-            limits:
-              memory: 128Mi
-              cpu: 100m
+          # resources:
+          #   requests:
+          #     memory: 1Gi
+          #     cpu: 100m
+          #   limits:
+          #     memory: 1Gi
+          #     cpu: 100m
           env:
             - name: NODE_ENV
               value: "production"
